Fix: flickering on load

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -130,3 +130,6 @@ nav ul {
   }
 }
 
+.hidden {
+  display: none;
+}
